增加自启动和修复重复唤醒的问题

--- a/局域网助手/ScanLan/resources/model.html
+++ b/局域网助手/ScanLan/resources/model.html
@@ -21,7 +21,6 @@
                 border-color: #0598ff;
                font-size: 18px;
                line-height: 1.3333333;
-    border-radius: 6px;
             }
         </style>
     <script type="text/javascript">
@@ -36,7 +35,7 @@
     <body>
         <form action="./wakeup.htm" method="get">
             <%#Buttons#%>
-            <input id="txtMac" name="txtMac" type="hidden" value="" />
+            <input id="txtMac" name="mac" type="hidden" value="" />
         </form>
     </body>
 </html>
