--- a/局域网助手/ScanLan/resources/wakeup.html
+++ b/局域网助手/ScanLan/resources/wakeup.html
@@ -27,7 +27,7 @@
     </script>
     </head>
     <body>
-        <form action="./wakeup.htm" method="get">
+        <form action="wakeup.htm" method="get">
             <input name="btnSub" value="唤醒1" class="btnSty" type="submit" onclick="onSubmit('4563456789')" />
             <input name="btnSub" value="唤醒2" class="btnSty" type="submit" onclick="onSubmit('65gh67568')" />
             <input id="txtMac" name="txtMac" type="hidden" value="" />
