--- a/局域网助手/ScanLan/resources/model.html
+++ b/局域网助手/ScanLan/resources/model.html
@@ -38,7 +38,7 @@
     </head>
     <body>
         <div style="text-align:center"> <h1>唤醒我的计算机</h1></div>
-        <form action="./wakeup.htm" method="get">
+        <form action="wakeup.htm" method="get">
             <%#Buttons#%>
             <input id="txtMac" name="mac" type="hidden" value="" />
         </form>
